--- a/indexNew.html
+++ b/indexNew.html
@@ -12,11 +12,7 @@
 <body class="container">
   <header class="header">
     <img src="img\logo4k.png" alt="4KREATIVE logo" class="header__logo" />
-    <div class="header__sidebar">
-      <svg class="line" height="6" width="40">
-        <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
-      </svg> Scroll
-    </div>
+
     <h3 class="header__big ">4KREATIVE</h3>
     <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
     <h1 class="header__brought reveal" id='revTwo'><span>Brought To Life</span></h1>
@@ -27,13 +23,6 @@
       <span class="cursor" data-owner="main"></span>
     </div>
     <button class="header__btn btn">Contact Us</button>
-
-    <ul class="header__social">
-      <li><a href="#"><i class="fa_menu fa fa-twitter fa-2x mb-sm"></i></a></li>
-      <li><a href="#"><i class="fa_menu fa fa-facebook fa-2x mb-sm"></i></a></li>
-      <li><a href="#"><i class="fa_menu fa fa-envelope fa-2x "></i></a></li>
-    </ul>
-
     </div>
   </header>
   <div class="bg-video">
@@ -48,21 +37,21 @@
     <div class="work__list">
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light"><span class="work__light_walk">The Light Walk</span></h4>
+        <h4 class="heading-4 heading-4--light">The Light Walk</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
 
       <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light"><span class="work__bl_system">B&L Cremation Systems</span></h4>
+        <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
 
       <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light"><span class="work__designer_shop">Designershopp</span></h4>
+        <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
@@ -119,7 +108,8 @@
       <p class="service__text">
         4Kreative provides highly effective search engine optimization
         and Internet marketing strategies to drive more customers to your site.
-        Identify top inbound opportunities and optimize your ranking for high-intent keywords. Increase your search engine
+        Identify top inbound opportunities and optimize your ranking for high-intent keywords. Increase your search
+        engine
         visibility to drive qualified traffic to your website.
       </p>
     </div>
@@ -136,7 +126,8 @@
         business to connect, disrupt, and engage. Whether we’re crafting an
         end-to-end customer experience or just working on a
         single touchpoint, we design with an eye towards the holistic customer experience.
-        Design conversion-optimized website and landing pages, engaging ads, email templates, and more. Make sure your brand
+        Design conversion-optimized website and landing pages, engaging ads, email templates, and more. Make sure your
+        brand
         uses strategic designs that stand out from the crowd.
       </p>
     </div>
@@ -146,12 +137,12 @@
       </svg>
       <h4 class="heading-4 heading-4--dark">Socail Media & Email Marketing</h4>
       <p class="service__text">
-          Drive brand awareness and engagement through organic and paid social
-          campaigns. Leverage top social strategies to grow a
-          following and gain valuable insight into your customers.
-          Build highly segmented email campaigns that nurture leads into paying
-          customers. Keep potential and existing customers
-          engaged with newsletters and promotional materials.
+        Drive brand awareness and engagement through organic and paid social
+        campaigns. Leverage top social strategies to grow a
+        following and gain valuable insight into your customers.
+        Build highly segmented email campaigns that nurture leads into paying
+        customers. Keep potential and existing customers
+        engaged with newsletters and promotional materials.
       </p>
     </div>
   </section>
