--- a/indexNew.html
+++ b/indexNew.html
@@ -33,28 +33,31 @@
     </video>
   </div>
   <section class="work">
-    <h3 class="heading-1">Recent Projects</h3>
+    <h3 class="heading-1 heading-1--dark">Recent Work</h3>
     <div class="work__list">
-      <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
+
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
+      <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
 
-      <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
+
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
+      <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
 
-      <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
+
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
+      <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
     </div>
   </section>
   <div class="about__pictures">
