--- a/indexNew.html
+++ b/indexNew.html
@@ -33,13 +33,14 @@
     </video>
   </div>
   <section class="work">
-    <h3 class="heading-1 heading-1--dark">Recent Work</h3>
+    <h3 class="heading-1">Recent Work</h3>
     <div class="work__list">
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
+          <button class=" btn">Visit Website </button>
       </div>
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
 
@@ -48,6 +49,7 @@
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
+          <button class=" btn">Visit Website </button>
       </div>
       <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
 
@@ -58,6 +60,8 @@
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
       <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
+      <button class=" btn">Visit Website </button>
+
     </div>
   </section>
   <div class="about__pictures">
