--- a/indexNew.html
+++ b/indexNew.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" type="image/png" href="" />
-<title>4 Kreative</title>
+<link rel="shortcut icon" href="img\logo4k_si0_icon.ico" type="image/x-icon">
+<title>Web Design and Development Services | 4Kreative</title>
 </head>
 
 <body class="container">
