styling contact form update

--- a/indexNew.html
+++ b/indexNew.html
@@ -71,7 +71,7 @@
     <img src="img/img5.jpg" alt="Design" class="about__img--2" />
   </div>
   <div class="about__content">
-    <h3 class="heading-3 mb-sm">
+    <h3 class="heading-3 mb-sm-1">
       Creative and technical proffesionals ready to create
       your next big idea!
     </h3>
