styling update contact

--- a/indexNew.html
+++ b/indexNew.html
@@ -40,7 +40,7 @@
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-          <button class=" btn">Visit Website </button>
+        <button class=" btn">Visit Website </button>
       </div>
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
 
@@ -50,7 +50,7 @@
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-          <button class=" btn">Visit Website </button>
+        <button class=" btn">Visit Website </button>
       </div>
       <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
 
@@ -59,7 +59,7 @@
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-          <button class=" btn">Visit Website </button>
+        <button class=" btn">Visit Website </button>
       </div>
       <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
 
@@ -156,7 +156,7 @@
     </div>
   </section>
   <section class="contact" id="contact">
-    <h3 class="heading-2 mb-sm">Contact Now!</h3>
+    <h3 class="heading-2 mb-sm"><span class="cnt">Contact Us</span></h3>
     <div class="form__group">
       <input type="text" class="form__input" placeholder="Full name" id="name" required />
       <label for="name" class="form__label">Full name</label>
