--- a/indexNew.html
+++ b/indexNew.html
@@ -26,9 +26,7 @@
     </div>
   </header>
   <div class="bg-video">
-    <video class="bg-video__content" poster="img/strings.jpg" autoplay muted loop>
-      <source src="img/strings.mp4" type="video/mp4" />
-      <source src="img/strings.webm" type="video/mp4" />
+    <video class="bg-video__content" poster="img/bg_services.jpg">
       Your browser is not supported!
     </video>
   </div>
