updated work section

--- a/indexNew.html
+++ b/indexNew.html
@@ -65,8 +65,8 @@
     </div>
   </section>
   <div class="about__pictures">
-    <img src="img/img1.jpg" alt="Code" class="about__img--1" />
-    <img src="img/img5.jpg" alt="Design" class="about__img--2" />
+    <!-- <img src="img/img1.jpg" alt="Code" class="about__img--1" />
+    <img src="img/img5.jpg" alt="Design" class="about__img--2" /> -->
   </div>
   <div class="about__content">
     <h3 class="heading-3 mb-sm-1">
