--- a/indexNew.html
+++ b/indexNew.html
@@ -36,8 +36,7 @@
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
-        <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
+        <p class="work__details">Custom Web Design, SEO, Pay Per Click Ads, Facebook Ads, Marketing.</p>
         <button class=" btn">Visit Website </button>
       </div>
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
@@ -46,8 +45,7 @@
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
-        <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
+        <p class="work__details">Custom Web Design, Custom Logo, Branding, SEO, Marketing.</p>
         <button class=" btn">Visit Website </button>
       </div>
       <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
@@ -55,8 +53,7 @@
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
-        <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
+        <p class="work__details">Custom Web Design, Custom Logo, SEO, Markeitng, Managing Website Functionality.</p>
         <button class=" btn">Visit Website </button>
       </div>
       <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
