--- a/indexNew.html
+++ b/indexNew.html
@@ -38,7 +38,7 @@
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-        <button class=" btn">Visit Website </button>
+        <button class=" btn work_button">Visit Website </button>
       </div>
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
 
@@ -48,7 +48,7 @@
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-        <button class=" btn">Visit Website </button>
+        <button class=" btn work_button">Visit Website </button>
       </div>
       <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
 
@@ -57,7 +57,7 @@
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-        <button class=" btn">Visit Website </button>
+        <button class=" btn work_button">Visit Website </button>
       </div>
       <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
 
