--- a/indexNew.html
+++ b/indexNew.html
@@ -151,7 +151,7 @@
     </div>
   </section>
   <section class="contact" id="contact">
-    <h3 class="heading-2 mb-sm"><span class="cnt">Contact Us</span></h3>
+    <h3 class="heading-2 mb-sm"><span class="cnt">Contact</span></h3>
     <div class="form__group">
       <input type="text" class="form__input" placeholder="Full name" id="name" required />
       <label for="name" class="form__label">Full name</label>
@@ -168,7 +168,7 @@
       <label for="message" class="form__label"> Message</label>
     </div>
 
-    <button class="btn form__btn">Send Request!</button>
+    <button class="form__btn btn">Send Request!</button>
   </section>
   <footer class="footer">
     <ul class="nav">
