work section content updates

--- a/indexNew.html
+++ b/indexNew.html
@@ -36,7 +36,11 @@
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
-        <p class="work__details">Custom Web Design, SEO, Pay Per Click Ads, Facebook Ads, Marketing.</p>
+        <h5 class="heading-5">Website Design & Development</h5>
+        <p class="work__details">
+          The Light Walk is a small business that specializes in Orthopedic, Therapeutic, and Diabetic Shoes. At
+          4Kreative we helped The Light Walk by building an online presence to drive traffic and conversions.
+        </p>
         <button class=" btn">Visit Website </button>
       </div>
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
@@ -45,6 +49,7 @@
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
+        <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">Custom Web Design, Custom Logo, Branding, SEO, Marketing.</p>
         <button class=" btn">Visit Website </button>
       </div>
@@ -53,6 +58,7 @@
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
+        <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">Custom Web Design, Custom Logo, SEO, Markeitng, Managing Website Functionality.</p>
         <button class=" btn">Visit Website </button>
       </div>
