updated font and svg in service and removed btn in work in media

--- a/indexNew.html
+++ b/indexNew.html
@@ -41,7 +41,7 @@
           The Light Walk is a small business that specializes in Orthopedic, Therapeutic, and Diabetic Shoes. At
           4Kreative we helped The Light Walk by building an online presence to drive traffic and conversions.
         </p>
-        <button class=" btn">Visit Website </button>
+        <button class="work__button btn">Visit Website </button>
       </div>
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
 
@@ -51,7 +51,7 @@
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">Custom Web Design, Custom Logo, Branding, SEO, Marketing.</p>
-        <button class=" btn">Visit Website </button>
+        <button class="work__button btn">Visit Website </button>
       </div>
       <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
 
@@ -60,7 +60,7 @@
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">Custom Web Design, Custom Logo, SEO, Markeitng, Managing Website Functionality.</p>
-        <button class=" btn">Visit Website </button>
+        <button class="work__button btn">Visit Website </button>
       </div>
       <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
 
@@ -145,7 +145,7 @@
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-key"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Socail Media & Email Marketing</h4>
+      <h4 class="heading-4 heading-4--dark">Social Media & Email Marketing</h4>
       <p class="service__text">
         Drive brand awareness and engagement through organic and paid social
         campaigns. Leverage top social strategies to grow a
