added links to btn and images

--- a/indexNew.html
+++ b/indexNew.html
@@ -22,7 +22,10 @@
         data-delay="86" data-deleteDelay="3000"></span>
       <span class="cursor" data-owner="main"></span>
     </div>
-    <button class="header__btn btn">Contact Us</button>
+    <a href="#contact">
+      <button class="header__btn btn">Contact Us</button>
+    </a>
+
     </div>
   </header>
   <div class="bg-video">
@@ -41,9 +44,15 @@
           The Light Walk is a small business that specializes in Orthopedic, Therapeutic, and Diabetic Shoes. At
           4Kreative we helped The Light Walk by building an online presence to drive traffic and conversions.
         </p>
-        <button class="work__button btn">Visit Website </button>
+        <a href="https://thelightwalk.com/" target= "_blank">
+          <button class="work__button btn">Visit Website </button>
+        </a>
+
       </div>
-      <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
+      <a href="https://thelightwalk.com/" target= "_blank">
+        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
+      </a>
+
 
 
 
@@ -51,18 +60,30 @@
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">Custom Web Design, Custom Logo, Branding, SEO, Marketing.</p>
-        <button class="work__button btn">Visit Website </button>
+        <a href="https://blcremationsystems.com/" target= "_blank">
+          <button class="work__button btn">Visit Website </button>
+        </a>
+
       </div>
-      <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
+      <a href="https://blcremationsystems.com/" target= "_blank">
+        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
+      </a>
+
 
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">Custom Web Design, Custom Logo, SEO, Markeitng, Managing Website Functionality.</p>
-        <button class="work__button btn">Visit Website </button>
+        <a href="https://www.designershopp.com/" target= "_blank">
+          <button class="work__button btn">Visit Website </button>
+        </a>
+
       </div>
-      <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
+      <a href="https://www.designershopp.com/" target= "_blank">
+        <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
+      </a>
+
 
 
     </div>
