animation added to header

--- a/indexNew.html
+++ b/indexNew.html
@@ -23,7 +23,7 @@
       <span class="cursor" data-owner="main"></span>
     </div>
     <a href="#contact">
-      <button class="header__btn btn">Contact Us</button>
+      <button class="header__btn btn main_btn">Contact Us</button>
     </a>
 
     </div>
