button fix padding fixes

--- a/indexNew.html
+++ b/indexNew.html
@@ -37,25 +37,21 @@
   <section class="work">
     <h3 class="heading-1" data-aos="fade-right">Recent Work</h3>
     <div class="work__list">
-      <div class="work__details" data-aos="flip-left"
-                                  data-aos-easing="ease-out-cubic"
-                                  data-aos-duration="2000">
+      <div class="work__details" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">
           The Light Walk is a small business that specializes in Orthopedic, Therapeutic, and Diabetic Shoes. At
           4Kreative we helped The Light Walk by building an online presence to drive traffic and conversions.
         </p>
-        <a href="https://thelightwalk.com/" target= "_blank">
+        <a href="https://thelightwalk.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
 
       </div>
-      <a href="https://thelightwalk.com/" target= "_blank">
-        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img"
-        data-aos="fade-right"
-        data-aos-offset="300"
-        data-aos-easing="ease-in-sine">
+      <a href="https://thelightwalk.com/" target="_blank">
+        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-right" data-aos-offset="300"
+          data-aos-easing="ease-in-sine">
       </a>
 
 
@@ -65,12 +61,12 @@
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">Custom Web Design, Custom Logo, Branding, SEO, Marketing.</p>
-        <a href="https://blcremationsystems.com/" target= "_blank">
+        <a href="https://blcremationsystems.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
 
       </div>
-      <a href="https://blcremationsystems.com/" target= "_blank">
+      <a href="https://blcremationsystems.com/" target="_blank">
         <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
       </a>
 
@@ -80,12 +76,12 @@
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">Custom Web Design, Custom Logo, SEO, Markeitng, Managing Website Functionality.</p>
-        <a href="https://www.designershopp.com/" target= "_blank">
+        <a href="https://www.designershopp.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
 
       </div>
-      <a href="https://www.designershopp.com/" target= "_blank">
+      <a href="https://www.designershopp.com/" target="_blank">
         <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
       </a>
 
@@ -171,7 +167,7 @@
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-key"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Social Media & Email Marketing</h4>
+      <h4 class="heading-4 heading-4--dark">Digital Marketing</h4>
       <p class="service__text">
         Drive brand awareness and engagement through organic and paid social
         campaigns. Leverage top social strategies to grow a
@@ -184,20 +180,22 @@
   </section>
   <section class="contact" id="contact">
     <h3 class="heading-2 mb-sm"><span class="cnt">Contact</span></h3>
-    <form action="https://formspree.io/mail.4kreative@gmail.com" method="POST">
+    <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST">
       <div class="form__group">
         <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required" />
         <label for="name" class="form__label">Full name</label>
       </div>
 
       <div class="form__group">
-        <input name="email" name="_replyto" type="email" class="form__input" placeholder="Email address" id="email" required="required" />
+        <input name="email" name="_replyto" type="email" class="form__input" placeholder="Email address" id="email"
+          required="required" />
         <label for="email" class="form__label">Email address</label>
       </div>
 
       <div class="form__group">
         <textarea name="message" rows="6" class="form__input" id="message" name="message"
-          placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message" required="required"></textarea>
+          placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message"
+          required="required"></textarea>
         <label for="message" class="form__label"> Message</label>
       </div>
 
@@ -226,7 +224,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({
-      duration : 1200,
+      duration: 1200,
     });
   </script>
 </body>
