updated svg icons

--- a/indexNew.html
+++ b/indexNew.html
@@ -122,7 +122,7 @@
   <section class="services">
     <div class="service">
       <svg class="service__icon">
-        <use xlink:href="img/sprite.svg#icon-global"></use>
+        <use xlink:href="img/sprite.svg#icon-mobile"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">Custom Web Design</h4>
       <p class="service__text">
@@ -147,7 +147,7 @@
     </div>
     <div class="service">
       <svg class="service__icon">
-        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        <use xlink:href="img/sprite.svg#icon-tools"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">Branding & Design</h4>
       <p class="service__text">
@@ -165,7 +165,7 @@
     </div>
     <div class="service">
       <svg class="service__icon">
-        <use xlink:href="img/sprite.svg#icon-key"></use>
+        <use xlink:href="img/sprite.svg#icon-megaphone"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">Digital Marketing</h4>
       <p class="service__text">
