moved js typer location

--- a/indexNew.html
+++ b/indexNew.html
@@ -220,7 +220,7 @@
       &copy; Copyright 2019 by 4KREATIVE.
     </p>
   </footer>
-  <script src="assets/js/typer.js"></script>
+  <script src="js/typer.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({
