--- a/indexNew.html
+++ b/indexNew.html
@@ -180,6 +180,18 @@
       </div>
       <a href="https://blcremationsystems.com/" target="_blank">
         <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
+        <!-- <img srcset="img/b&lmockup-min.png 600w, img/b&lmockup-min-large.png 1000w"
+          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
+          alt="Work 2"
+          class="work__img"
+          src="img/b&lmockup-min-large.png"> -->
+          <!-- <picture class="footer__logo">
+            <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                    media="(max-width: 37.5em)">
+              <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+                   alt="Full logo"
+                   src="img/logo-green-2x.png">
+          </picture> -->
       </a>
 
 
