--- a/indexNew.html
+++ b/indexNew.html
@@ -217,8 +217,8 @@
     <!-- <img src="img/img1.jpg" alt="Code" class="about__img--1" />
     <img src="img/img5.jpg" alt="Design" class="about__img--2" /> -->
   </div>
-  <div class="about__content">
-    <h3 class="heading-3 mb-sm-1">
+  <div class="about__content" >
+    <h3 class="heading-3 mb-sm-1" data-aos="fade-up-right">
       Creative and technical proffesionals ready to create
       your next big idea!
     </h3>
