added content to work section, and services sections

--- a/indexNew.html
+++ b/indexNew.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -9,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Design and Development Services | 4Kreative</title>
   <meta name="description"
-    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!">
+    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccommerce Site. I preach Secure, DRY & Structured development!">
   <meta name="keywords"
     content="4Kreative, web development, design, fullstack, ecommerce, seo, Boston, MA, Clearwater, FL USA">
   <meta name="author" content="Taras Kurilo, Ivan Perun">
@@ -26,10 +27,10 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="4Kreative Digital Media Marketing Agency">
   <meta property="og:description"
-    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!. Contact me now.">
+    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccommerce Site. I preach Secure, DRY & Structured development!. Contact me now.">
   <meta property="og:url" content="https://www.4kreative.co/">
   <meta property="og:site_name"
-    content="4Kreative | Digital Media Marketing Agency, Web Developent, Design, Ecommerce in Boston &amp; MA &amp; & Clearwater &amp; FL &amp; USA">
+    content="4Kreative | Digital Media Marketing Agency, Web Development, Design, Ecommerce in Boston &amp; MA &amp; & Clearwater &amp; FL &amp; USA">
   <meta property="og:image" content="https://4kreative.co/img/logo.png">
   <meta property="og:image:secure_url" content="https://4kreative.co/img/logo.png">
   <meta property="og:image:width" content="960">
@@ -37,77 +38,77 @@
   <meta property="og:image:alt" content="4 Kreative Digital Media Marketing Agency">
   <!-- Google Structured Data Rich Snippet Review Schema -->
   <script type="application/ld+json">
-      {
-        "@context": "http://schema.org/",
-        "@type": "Review",
-        "itemReviewed": {
-          "@type": "Service",
-          "name": "4kreative.co"
-        },
-        "author": {
-          "@type": "Person",
-          "name": "Joe Smith"
-        },
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "5",
-          "bestRating": "5"
-        }
+    {
+      "@context": "http://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "Service",
+        "name": "4kreative.co"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Joe Smith"
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
       }
-    </script>
+    }
+  </script>
   <!-- Google Structured Data Person Schema -->
   <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "Person",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Stoughton",
-          "addressRegion": "MA",
-          "postalCode": "02072"
-        },
-        "email": "mail.4kreative@gmail.com",
-        "image": "https://4kreative.co/img/logo.png",
-        "jobTitle": "Web Developer",
-        "name": "Taras Kurilo",
-        "alumniOf": "Umass Boston",
-        "url": "https://www.taraskurilo.com",
-        "sameAs": [
-          "https://www.linkedin.com/in/taras-kurilo-4a922613a/",
-          "https://plus.google.com/106437617603533510597"
-        ],
-        "colleague": [
-          "http://perundesign.com/",
-          "https://iperun23.github.io/"
-        ]
-      }
-    </script>
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Stoughton",
+        "addressRegion": "MA",
+        "postalCode": "02072"
+      },
+      "email": "mail.4kreative@gmail.com",
+      "image": "https://4kreative.co/img/logo.png",
+      "jobTitle": "Web Developer",
+      "name": "Taras Kurilo",
+      "alumniOf": "Umass Boston",
+      "url": "https://www.taraskurilo.com",
+      "sameAs": [
+        "https://www.linkedin.com/in/taras-kurilo-4a922613a/",
+        "https://plus.google.com/106437617603533510597"
+      ],
+      "colleague": [
+        "http://perundesign.com/",
+        "https://iperun23.github.io/"
+      ]
+    }
+  </script>
   <!-- Google Structured Data Website Schema -->
   <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "WebSite",
-        "@id": "#website",
-        "url": "https://4kreative.co/",
-        "name": "4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Eccomerce in USA &amp; Stoughton &amp; Clearwater",
-        "description": "I build bespoke websites to help my clients push their businesses further online.",
-        "publisher": "Taras Kurilo, Ivan Perun",
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "http://4kreative.co/search?&q={query}",
-          "query-input": "required name=query"
-        }
+    {
+      "@context": "http://schema.org",
+      "@type": "WebSite",
+      "@id": "#website",
+      "url": "https://4kreative.co/",
+      "name": "4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Eccomerce in USA &amp; Stoughton &amp; Clearwater",
+      "description": "I build bespoke websites to help my clients push their businesses further online.",
+      "publisher": "Taras Kurilo, Ivan Perun",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "http://4kreative.co/search?&q={query}",
+        "query-input": "required name=query"
       }
-    </script>
+    }
+  </script>
   <!-- Google Structured Data Logo Schema -->
   <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "Organization",
-        "url": "https://www.4kreative.co",
-        "logo": "https://4kreative.co/img/logo.png"
-      }
-    </script>
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "https://www.4kreative.co",
+      "logo": "https://4kreative.co/img/logo.png"
+    }
+  </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134678695-1"></script>
   <script>
@@ -154,7 +155,8 @@
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">
           The Light Walk is a small business that specializes in Orthopedic, Therapeutic, and Diabetic Shoes. At
-          4Kreative we helped The Light Walk by building an online presence to drive traffic and conversions.
+          4Kreative we helped The Light Walk by building an online presence to drive traffic and conversions with their
+          new custom built website.
         </p>
         <a href="https://thelightwalk.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
@@ -171,8 +173,13 @@
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
-        <h5 class="heading-5">Website Design & Development</h5>
-        <p class="work__details">Custom Web Design, Custom Logo, Branding, SEO, Marketing.</p>
+        <h5 class="heading-5">Website Development & SEO Strategy</h5>
+        <p class="work__details">B&L Cremation Systems is the largest family-owned, independent crematory manufacturer
+          in the world.
+          We helped them create a new and dynamic website focusing on great user experience and accessibility. With
+          strategic SEO and Digital marketing we were able to effectively increase traffic and sales.
+
+        </p>
         <a href="https://blcremationsystems.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
@@ -185,7 +192,7 @@
           alt="Work 2"
           class="work__img"
           src="img/b&lmockup-min-large.png"> -->
-          <!-- <picture class="footer__logo">
+        <!-- <picture class="footer__logo">
             <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
                     media="(max-width: 37.5em)">
               <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
@@ -198,8 +205,12 @@
 
       <div class="work__details">
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
-        <h5 class="heading-5">Website Design & Development</h5>
-        <p class="work__details">Custom Web Design, Custom Logo, SEO, Markeitng, Managing Website Functionality.</p>
+        <h5 class="heading-5">Website Development & Ecommerce</h5>
+        <p class="work__details">The Designershopp is an online clothing retailer. The company had be significantly
+          growing, and needed our help with improving and redesigning their ecommerce website. We created an online
+          store and an easy
+          shopping experience for the users, further driving growth and sales.
+        </p>
         <a href="https://www.designershopp.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
@@ -217,29 +228,28 @@
     <!-- <img src="img/img1.jpg" alt="Code" class="about__img--1" />
     <img src="img/img5.jpg" alt="Design" class="about__img--2" /> -->
   </div>
-  <div class="about__content" >
+  <div class="about__content">
     <h3 class="heading-3 mb-sm-1" data-aos="fade-up-right">
-      Creative and technical proffesionals ready to create
+      Creative and technical professionals ready to create
       your next big idea!
     </h3>
     <h2 class="heading-2 heading-2--dark mb-md">
       What We Do
     </h2>
     <p class="about__text">
-      <span class="bold">Define:</span> Gather requirments, organize and plan
-      the project.
+      <span class="bold">Define:</span> Gather requirements, organize and plan
+      the project
     </p>
     <p class="about__text">
       <span class="bold">Design:</span> Our team collaborates with you to
-      creativly design your brand..
+      creatively design your brand
     </p>
     <p class="about__text">
       <span class="bold">Develop:</span> Prototypes and alpha version of the
       project are set for approval
     </p>
     <p class="about__text">
-      <span class="bold">Deploy:</span> Prototypes and alpha version of the
-      project are set for approval.
+      <span class="bold">Deploy:</span> Final project review to full satisfaction and officially launched
     </p>
 
   </div>
@@ -248,7 +258,7 @@
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-mobile"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Custom Web Design</h4>
+      <h4 class="heading-4 heading-4--dark">Custom Websites</h4>
       <p class="service__text">
         If you want want your website to work in all situations, then you need
         something that's fast to load, looks professional and most of all,
@@ -260,7 +270,7 @@
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-presentation"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Content & SEO Strategy</h4>
+      <h4 class="heading-4 heading-4--dark">Content & SEO</h4>
       <p class="service__text">
         4Kreative provides highly effective search engine optimization
         and Internet marketing strategies to drive more customers to your site.
